MCDawn 1.0.1.9
-Updated Commands
	-/rules - Works as intended from Console.
	-/oprules - Works as intended from Console.
	-/kick - Modified kick messages.

MCDawn 1.0.1.7/8
-Critical update: Fixed bug with Name column in database.

MCDawn 1.0.1.6
-Updated Commands
	-/players - Will show users in IRC channels if IRC is enabled.
	-/irc - Will correctly show users in IRC channels.
	-/hsave - Works as intended.
-New Commands
	-/dome <radius> <block> [hollow/solid] - Creates a dome around you.
	-/cone <radius> <vertical expansion> <block> [hollow/solid] - Creates a cone around and above you.
	-/pyramid <radius> <vertical expansion> <block> [hollow/solid] - Creates a pyramid around and above you.
-MCDawn Server List re-coded to fix several bugs.
-WOM Server List heartbeat URL updated to https://direct.worldofminecraft.com/server.php.
-Added support for email usernames.
	
MCDawn 1.0.1.5
-Added !url IRC command (Type !url in the channel of the IRC bot and the server will say the URL of the server).
-ProfanityFilter fixed to work properly, and not throw OutOfMemoryExceptions.
-Anti-Caps and Anti-Spam features fixed to work properly now.
-Fixed small Admin Security System bug.
-If GeoIP is enabled, players connecting from local IP addresses (same network/machine) now have their countries shown as "Localhost (CountryName)" instead of "N/A".
-Updated Commands
	-/save - If correct amount of arguments given, it won't error when executed from Console now.
	-/throttle - If set to 0, throttling will be turned off (building commands will go at full speed).
	-/unload empty - Works as intended now.
	-/zoneall - Fixed to work properly on non perfect cube levels.
	-/reveal all - Instead of reloading the map for each player at once, it will do all at the same time.
-Added Omni-Banning and Global-Banning for servers / consoles.
-Map Editor/Viewer tab complete, added fCraft IsoCat Map Viewer.